--- a/mod-asistencia/src/main/resources/templates/administrar.html
+++ b/mod-asistencia/src/main/resources/templates/administrar.html
@@ -7,34 +7,14 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Asistencia</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/registros/nuevo">Registrar Asistencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/incidencias/nueva">Registrar Incidencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/administrar">Administrar</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <header th:replace="Layout/layout :: header"></header>
     <div class="container">
     <div class="text-center my-3">
         <h1>Opciones de Administrador</h1>
         <a href="/usuarios">Gestionar Usuarios</a>
         <a href="/registros">Revisar Registros</a>
         <a href="/incidencias">Revisar Incidencias</a>
-        <a href="#">Ver estadisticas</a>
+        <a href="/estadisticas">Ver estadisticas</a>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <a  href="/" class="btn btn-outline-secondary">Cerrar Sesion</a>
     </div>
