--- a/mod-asistencia/src/main/resources/templates/incidencia.html
+++ b/mod-asistencia/src/main/resources/templates/incidencia.html
@@ -57,13 +57,14 @@
                     </tr>
                 </tbody>
             </table>
+            <nav th:replace="paginator-nav :: paginatorRegistros"></nav>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <a  href="/administrar" class="btn btn-outline-secondary">Volver</a>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <footer th:replace="Layout/layout :: footer"></footer>
 
     <script>
         function eliminarIncidencia(elemento) {
