--- a/mod-asistencia/src/main/resources/templates/incidencia_formulario.html
+++ b/mod-asistencia/src/main/resources/templates/incidencia_formulario.html
@@ -6,27 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <nav th:if="${incidencia.id == null}" class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Asistencia</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/registros/nuevo">Registrar Asistencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/incidencias/nueva">Registrar Incidencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/administrar">Administrar</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <header th:if="${incidencia.id == null}" th:replace="Layout/layout :: header"></header>
+    <div th:if="${msgError != null}" class="alert alert-danger alert-dismissible">
+        [[${msgError}]]
+        <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
+    </div>
     <div class="row justify-content-center">
         <div class="col-md6 col-lg-4">
             <h3>[[${incidencia.id ne null ? 'Editar registro de incidencia' : 'Añadir nuevo registro de incidencia'}]]</h3>
@@ -35,8 +19,14 @@
                 <input type="hidden" th:field="*{id}" th:value="${incidencia.id}">
                 <div class="mb-3">
                     <label for="usuario">Expediente del usuario : </label>
-                    <input id="usuario" type="text" placeholder="Digite el expediente del usuario" th:field="*{usuario}" class="form-control" th:errorclass="is-invalid">
+                    <input id="usuario" type="text" name="usuario" placeholder="Digite el expediente del usuario" th:field="*{usuario}" class="form-control" th:errorclass="is-invalid" required>
                     <div th:if="${#fields.hasErrors('usuario')}" th:errors="*{usuario}" class="invalid-feedback"></div>
+                </div>
+                <div th:if="${incidencia.id == null}">
+                    <div class="mb-3">
+                        <label for="password">Contraseña del usuario: </label>
+                        <input id="password" type="password" name="password" placeholder="Digite la contraseña"  class="form-control" required>
+                    </div>
                 </div>
                 <div class="mb-3">
                     <label for="hora">Hora del registro : </label>
@@ -73,7 +63,6 @@
             </form>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <footer th:replace="Layout/layout :: footer"></footer>
 </body>
 </html>
