--- a/mod-asistencia/src/main/resources/templates/index.html
+++ b/mod-asistencia/src/main/resources/templates/index.html
@@ -7,27 +7,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Asistencia</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/registros/nuevo">Registrar Asistencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/incidencias/nueva">Registrar Incidencia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/administrar">Administrar</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <header th:replace="Layout/layout :: header"></header>
     <div class="container">
         <div th:if="${msgExito != null}" class="alert alert-success alert-dismissible">
             [[${msgExito}]]
@@ -38,6 +18,6 @@
         <a href="/registros">Lista de Registros</a>
         <a href="/incidencias">Lista de Incidencias</a>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <footer th:replace="Layout/layout :: footer"></footer>
 </body>
 </html>
