--- a/mod-asistencia/src/main/resources/templates/registro.html
+++ b/mod-asistencia/src/main/resources/templates/registro.html
@@ -6,7 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-
     <div class="container">
         <div th:if="${msgExito != null}" class="alert alert-success alert-dismissible">
             [[${msgExito}]]
@@ -50,14 +49,14 @@
                     </tr>
                 </tbody>
             </table>
+            <nav th:replace="paginator-nav :: paginatorRegistros"></nav>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <a  href="/administrar" class="btn btn-outline-secondary">Volver</a>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <footer th:replace="Layout/layout :: footer"></footer>
     <script>
         function eliminarRegistro(elemento) {
             var ok = confirm('¿Estas seguro de eliminar el registro?');
