--- a/mod-asistencia/src/main/resources/templates/usuario_nuevo_formulario.html
+++ b/mod-asistencia/src/main/resources/templates/usuario_nuevo_formulario.html
@@ -3,55 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <title>Registrar nuevo usuario</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
-<div class="row justify-content-center">
-    <div class="col-md6 col-lg-4">
-        <h3>Registrar nuevo usuario</h3>
-        <br>
-        <form action="" method="post" th:object="${usuario}" >
-                <div class= "mb-3">
-                    <label for="expediente">Expediente : </label>
-                    <input id="expediente" type="text" placeholder="Digite el expediente" th:field="*{expediente}" class="form-control" th:errorclass="is-invalid">
-
-                    <div th:if="${#fields.hasErrors('expediente')}" th:errors="*{expediente}" class="invalid-feedback"></div>
-                </div>
-            <div class= "mb-3">
-                <label for="nombre">Nombre : </label>
-                <input id="nombre" type="text" placeholder="Digite el nombre" th:field="*{nombre}" class="form-control" th:errorclass="is-invalid">
-
-                <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="invalid-feedback"></div>
-            </div>
-            <div class= "mb-3">
-                <label for="horaEntrada">Hora de entrada : </label>
-                <input id="horaEntrada" type="time" th:field="*{horaEntrada}" class="form-control" th:errorclass="is-invalid">
-
-                <div th:if="${#fields.hasErrors('horaEntrada')}" th:errors="*{horaEntrada}" class="invalid-feedback"></div>
-            </div>
-            <div class= "mb-3">
-                <label for="horaSalida">Hora de salida : </label>
-                <input id="horaSalida" type="time" th:field="*{horaSalida}" class="form-control" th:errorclass="is-invalid">
-
-                <div th:if="${#fields.hasErrors('horaSalida')}" th:errors="*{horaSalida}" class="invalid-feedback"></div>
-            </div>
-            <div class= "mb-3">
-                <label for="password">Contraseña : </label>
-                <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control" th:errorclass="is-invalid">
-
-                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="invalid-feedback"></div>
-            </div>
-            <div class= "text-end">
-                <button class="btn btn-success">Guardar</button>
-                &nbsp;&nbsp;
-                <a href="/usuarios" class="btn btn-light ms-2">Cancelar</a>
-            </div>
-        </form>
+    <div class="container">
+        <div th:if="${msgFallo != null}" class="alert alert-danger alert-dismissible">
+            [[${msgFallo}]]
+            <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
+        </div>
     </div>
-</div>
+    <div class="row justify-content-center">
+        <div class="col-md6 col-lg-4">
+            <h3>Registrar nuevo usuario</h3>
+            <br>
+            <form action="" method="post" th:object="${usuario}" >
+                    <div class= "mb-3">
+                        <label for="expediente">Expediente : </label>
+                        <input id="expediente" type="text" placeholder="Digite el expediente" th:field="*{expediente}" class="form-control" th:errorclass="is-invalid">
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+                        <div th:if="${#fields.hasErrors('expediente')}" th:errors="*{expediente}" class="invalid-feedback"></div>
+                    </div>
+                <div class= "mb-3">
+                    <label for="nombre">Nombre : </label>
+                    <input id="nombre" type="text" placeholder="Digite el nombre" th:field="*{nombre}" class="form-control" th:errorclass="is-invalid">
 
+                    <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="invalid-feedback"></div>
+                </div>
+                <div class= "mb-3">
+                    <label for="horaEntrada">Hora de entrada : </label>
+                    <input id="horaEntrada" type="time" th:field="*{horaEntrada}" class="form-control" th:errorclass="is-invalid">
+
+                    <div th:if="${#fields.hasErrors('horaEntrada')}" th:errors="*{horaEntrada}" class="invalid-feedback"></div>
+                </div>
+                <div class= "mb-3">
+                    <label for="horaSalida">Hora de salida : </label>
+                    <input id="horaSalida" type="time" th:field="*{horaSalida}" class="form-control" th:errorclass="is-invalid">
+
+                    <div th:if="${#fields.hasErrors('horaSalida')}" th:errors="*{horaSalida}" class="invalid-feedback"></div>
+                </div>
+                <div class= "mb-3">
+                    <label for="password">Contraseña : </label>
+                    <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control" th:errorclass="is-invalid">
+
+                    <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="invalid-feedback"></div>
+                </div>
+                <div class= "text-end">
+                    <button class="btn btn-success">Guardar</button>
+                    &nbsp;&nbsp;
+                    <a href="/usuarios" class="btn btn-light ms-2">Cancelar</a>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <footer th:replace="Layout/layout :: footer"></footer>
 </body>
 </html>
