Proyecto antes de implementar spring security

--- a/mod-asistencia/src/main/resources/templates/usuario_editar_formulario.html
+++ b/mod-asistencia/src/main/resources/templates/usuario_editar_formulario.html
@@ -33,9 +33,7 @@
             </div>
             <div class= "mb-3">
                 <label for="password">Contraseña : </label>
-                <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control" th:errorclass="is-invalid">
-
-                <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" class="invalid-feedback"></div>
+                <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control">
             </div>
             <div class= "mb-3">
                 <label for="estado">Estado : </label>
