--- a/mod-asistencia/src/main/resources/templates/estadistica.html
+++ b/mod-asistencia/src/main/resources/templates/estadistica.html
@@ -2,42 +2,47 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Administrar</title>
+    <title>Estadisticas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
- <span th:text="${numeroUsuarios}"></span>
- <br>
- <br>
- <span th:text="${asistenciasTotales}"></span>
- <br>
- <br>
- <span th:text="${numeroAsistencias}"></span>
- <br>
- <br>
- <span th:text="${faltas}"></span>
-
 <div class="container">
-    <canvas id="myChart"></canvas>
+    <h1>Estadisticas de Asistencia [[${fechaInicio}]] - [[${fechaFinal}]]</h1>
+    <br>
+    <h4 class="card-title">
+        <a th:href="@{/registros/exportar}" class="btn btn-success">Descargar Registros Comunes</a>
+        <a th:href="@{/incidencias/exportar}" class="btn btn-secondary">Descargar Registros Incidencias</a>
+    </h4>
+</div>
+<div  class="row justify-content-center">
+    <div class="col-lg-4">
+        <canvas id="myChart"></canvas>
+    </div>
+</div>
+<br>
+<div class="container d-grid gap-2 d-md-flex justify-content-md-end">
+    <a  href="/" class="btn btn-outline-secondary">Volver</a>
 </div>
 
+ <script th:inline="javascript">
+     var faltas = [[${faltas}]]
+     var numeroAsistencias = [[${numeroAsistencias}]]
+ </script>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
     const data = {
         labels: [
-            'Red',
-            'Blue',
-            'Yellow'
+            'Faltas',
+            'Asistencias'
         ],
         datasets: [{
             label: 'My First Dataset',
-            data: [300, 50, 100],
+            data: [faltas, numeroAsistencias],
             backgroundColor: [
-                'rgb(255, 99, 132)',
-                'rgb(54, 162, 235)',
-                'rgb(255, 205, 86)'
+                'rgb(181, 51, 255)',
+                'rgb(51, 187, 230)'
             ],
             hoverOffset: 4
         }]
