--- a/mod-asistencia/src/main/resources/templates/incidencia.html
+++ b/mod-asistencia/src/main/resources/templates/incidencia.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de registros de incidencias</title>
+    <title>Lista de Registros de Incidencias</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -16,10 +16,13 @@
             [[${msgFallo}]]
             <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
         </div>
-        <h1>Lista de registros de incidencias</h1>
-        <div class="text-center my-3">
-            <a href="/incidencias/nueva" class="btn btn-primary">Añadir registro</a>
-        </div>
+
+        <h1>Lista de Registros de Incidencias</h1>
+        <h4 class="card-title">
+            <a href="/incidencias/nueva" class="btn btn-primary">Añadir Registro de Incidencia</a>
+            <a th:href="@{/incidencias/exportar}" class="btn btn-success">Descargar Registros de Incidencias</a>
+        </h4>
+
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead class="table-info">
