--- a/mod-asistencia/src/main/resources/templates/registro.html
+++ b/mod-asistencia/src/main/resources/templates/registro.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de registros normales</title>
+    <title>Lista de Registros Comunes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -12,11 +12,10 @@
             <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
         </div>
 
-        <h1>Lista de registros normales</h1>
+        <h1>Lista de Registros Comunes</h1>
         <h4 class="card-title">
-            <a href="/registros/nuevo" class="btn btn-primary">Añadir registro</a>
-            <a th:href="@{/registros/exportar}" class="btn btn-secondary">Descargar Registros</a>
-            <a th:href="@{/incidencias/exportar}" class="btn btn-success">Descargar Incidencias</a>
+            <a href="/registros/nuevo" class="btn btn-primary">Añadir Registro Comun</a>
+            <a th:href="@{/registros/exportar}" class="btn btn-success">Descargar Registros Comunes</a>
         </h4>
 
         <div class="table-responsive">
@@ -25,9 +24,9 @@
                 <tr>
                     <th>ID</th>
                     <th>Expediente</th>
-                    <th>Hora</th>
+                    <th>Hora de Entrada</th>
+                    <th>Hora de Salida</th>
                     <th>Fecha</th>
-                    <th>Tipo</th>
                     <th>Acciones</th>
                 </tr>
                 </thead>
@@ -35,9 +34,9 @@
                     <tr th:each="registro : ${listaRegistros}">
                         <td th:text="${registro.id}"></td>
                         <td th:text="${registro.usuario.expediente}"></td>
-                        <td th:text="${#temporals.format(registro.hora,'hh:mm a')}"></td>
+                        <td th:text="${#temporals.format(registro.horaEntrada,'hh:mm a')}"></td>
+                        <td th:text="${#temporals.format(registro.horaSalida,'hh:mm a')}"></td>
                         <td th:text="${#temporals.format(registro.fecha,'YYYY/MM/dd')}"></td>
-                        <td th:text="${registro.tipo}"></td>
                         <td>
                             <div class="btn-group">
                             <a th:href="@{/registros/editar/{id} (id=${registro.id})}" class="btn btn-warning">Editar</a>
