--- a/mod-asistencia/src/main/resources/templates/usuario.html
+++ b/mod-asistencia/src/main/resources/templates/usuario.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de usuarios</title>
+    <title>Lista de Usuarios</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -17,9 +17,10 @@
             <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
         </div>
         <h1>Lista de Usuarios</h1>
-        <div class="text-center my-3">
-            <a href="/usuarios/nuevo" class="btn btn-primary">Añadir usuario</a>
-        </div>
+        <h4 class="card-title">
+            <a href="/usuarios/nuevo" class="btn btn-primary">Añadir Usuario</a>
+        </h4>
+
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead class="table-info">
