Proyecto antes de front end

--- a/mod-asistencia/src/main/resources/templates/estadistica.html
+++ b/mod-asistencia/src/main/resources/templates/estadistica.html
@@ -22,7 +22,7 @@
 </div>
 <br>
 <div class="container d-grid gap-2 d-md-flex justify-content-md-end">
-    <a  href="/" class="btn btn-outline-secondary">Volver</a>
+    <a  href="/administrar" class="btn btn-outline-secondary">Volver</a>
 </div>
 
  <script th:inline="javascript">
