--- a/mod-asistencia/src/main/resources/templates/incidencia/incidencia-formulario.html
+++ b/mod-asistencia/src/main/resources/templates/incidencia/incidencia-formulario.html
@@ -6,7 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <header th:if="${incidencia.id == null}" th:replace="Layout/layout :: header"></header>
+    <div th:if="${incidencia.id == null}">
+        <header th:replace="Layout/layout :: header"></header>
+    </div>
     <div th:if="${msgError != null}" class="alert alert-danger alert-dismissible">
         [[${msgError}]]
         <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
@@ -19,7 +21,7 @@
                 <input type="hidden" th:field="*{id}" th:value="${incidencia.id}">
                 <div class="mb-3">
                     <label for="usuario">Expediente del usuario : </label>
-                    <input id="usuario" type="text" name="usuario" placeholder="Digite el expediente del usuario" th:field="*{usuario}" class="form-control" th:errorclass="is-invalid" required>
+                    <input id="usuario" type="text" name="usuario" placeholder="Digite el expediente" th:field="*{usuario}" class="form-control" th:errorclass="is-invalid" required>
                     <div th:if="${#fields.hasErrors('usuario')}" th:errors="*{usuario}" class="invalid-feedback"></div>
                 </div>
                 <div th:if="${incidencia.id == null}">
@@ -39,8 +41,11 @@
                     <div th:if="${#fields.hasErrors('fecha')}" th:errors="*{fecha}" class="invalid-feedback"></div>
                 </div>
                 <div class="mb-3">
-                    <label for="tipo">Registro de : </label>
-                    <input id="tipo" type="text" placeholder="Digite el tipo de registro" th:field="*{tipo}"  class="form-control" th:errorclass="is-invalid">
+                    <label>Registro de : </label>
+                    <select th:field="*{tipo}" class="form-select form-select-sm" aria-label=".form-select-sm example" th:errorclass="is-invalid">
+                        <option value="Entrada">Entrada</option>
+                        <option value="Salida">Salida</option>
+                    </select>
                     <div th:if="${#fields.hasErrors('tipo')}" th:errors="*{tipo}" class="invalid-feedback"></div>
                 </div>
                 <div class="mb-3">
@@ -50,8 +55,11 @@
                 </div>
                 <div th:if="${incidencia.id != null}">
                     <div class="mb-3">
-                        <label for="estado">Estado del registro de incidencia: </label>
-                        <input id="estado" type="text" placeholder="Agregue un estado al registro" th:field="*{estado}"  class="form-control" required>
+                        <label>Estado del registro de incidencia: </label>
+                        <select th:field="*{estado}" class="form-select form-select-sm" aria-label=".form-select-sm example" required>
+                            <option value="Validado">Validado</option>
+                            <option value="No validado">No validado</option>
+                        </select>
                     </div>
                 </div>
                 <div class="text-end">
