--- a/mod-asistencia/src/main/resources/templates/incidencia/incidencia-lista.html
+++ b/mod-asistencia/src/main/resources/templates/incidencia/incidencia-lista.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Lista de Registros de Incidencias</title>
@@ -18,28 +19,28 @@
         </div>
 
         <h1>Lista de Registros de Incidencias</h1>
-        <h4 class="card-title">
+        <h4 c sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPERVISOR')" lass="card-title">
             <a href="/incidencias/nueva" class="btn btn-primary">Añadir Registro de Incidencia</a>
-            <a th:href="@{/incidencias/exportar}" class="btn btn-success">Descargar Registros de Incidencias</a>
+            <a  th:href="@{/incidencias/exportar}" class="btn btn-success">Descargar Registros de Incidencias</a>
         </h4>
 
         <div class="table-responsive">
             <table class="table table-hover">
                 <thead class="table-info">
                 <tr>
-                    <th>ID</th>
+                    <th>Nombre</th>
                     <th>Expediente</th>
                     <th>Hora</th>
                     <th>Fecha</th>
                     <th>Tipo</th>
                     <th>Estado</th>
                     <th>Detalles</th>
-                    <th>Acciones</th>
+                    <th sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPERVISOR')">Acciones</th>
                 </tr>
                 </thead>
                 <tbody>
                     <tr th:each="incidencia : ${listaIncidencias}">
-                        <td th:text="${incidencia.id}"></td>
+                        <td th:text="${incidencia.usuario.nombre}"></td>
                         <td th:text="${incidencia.usuario.expediente}"></td>
                         <td th:text="${#temporals.format(incidencia.hora,'hh:mm a')}"></td>
                         <td th:text="${#temporals.format(incidencia.fecha,'YYYY/MM/dd')}"></td>
@@ -47,7 +48,7 @@
                         <td th:text="${incidencia.estado}"></td>
                         <td th:text="${incidencia.detalles}"></td>
                         <td>
-                            <div class="btn-group">
+                            <div sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPERVISOR')" class="btn-group">
                                 <a  href="#" onclick="validarIncidencia(this)" class="btn btn-success"  >Validar</a>
                                 <form th:action="@{/incidencias/validar/{id} (id=${incidencia.id})}" method="post"></form>
                                 &nbsp;&nbsp;
@@ -60,7 +61,7 @@
                     </tr>
                 </tbody>
             </table>
-            <nav th:replace="paginator-nav :: paginatorRegistros"></nav>
+            <nav th:replace="Layout/paginator-nav :: paginatorRegistros"></nav>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             <a  href="/administrar" class="btn btn-outline-secondary">Volver</a>
