--- a/mod-asistencia/src/main/resources/templates/usuario/usuario-editar.html
+++ b/mod-asistencia/src/main/resources/templates/usuario/usuario-editar.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>Editar usuario</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
@@ -31,13 +32,23 @@
 
                 <div th:if="${#fields.hasErrors('horaSalida')}" th:errors="*{horaSalida}" class="invalid-feedback"></div>
             </div>
+            <div sec:authorize="hasRole('ROLE_ADMIN')" class="mb-3">
+                <label >Asignar roles : </label>
+                <select th:field="${usuario.roles}" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option th:each="rol :${roles}" th:value="${rol.id}" th:text="${rol.nombre}">
+                    </option>
+                </select>
+            </div>
             <div class= "mb-3">
                 <label for="password">Contraseña : </label>
                 <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control">
             </div>
-            <div class= "mb-3">
-                <label for="estado">Estado : </label>
-                <input id="estado" type="text" placeholder="Digite el estado" th:field="*{estado}"  class="form-control" required>
+            <div sec:authorize="hasRole('ROLE_ADMIN')" class= "mb-3">
+                <label >Estado del Usuario : </label>
+                <select th:field="*{estado}" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                    <option value="Activo">Activo</option>
+                    <option value="Inactivo">Inactivo</option>
+                </select>
             </div>
             <div class= "text-end">
                 <button class="btn btn-success">Actualizar</button>
