--- a/mod-asistencia/src/main/resources/templates/incidencia/incidencia-lista.html
+++ b/mod-asistencia/src/main/resources/templates/incidencia/incidencia-lista.html
@@ -43,7 +43,7 @@
                         <td th:text="${incidencia.usuario.nombre}"></td>
                         <td th:text="${incidencia.usuario.expediente}"></td>
                         <td th:text="${#temporals.format(incidencia.hora,'hh:mm a')}"></td>
-                        <td th:text="${#temporals.format(incidencia.fecha,'YYYY/MM/dd')}"></td>
+                        <td th:text="${#temporals.format(incidencia.fecha,'dd/MM/YYYY')}"></td>
                         <td th:text="${incidencia.tipo}"></td>
                         <td th:text="${incidencia.estado}"></td>
                         <td th:text="${incidencia.detalles}"></td>
