--- a/mod-asistencia/src/main/resources/templates/Layout/layout.html
+++ b/mod-asistencia/src/main/resources/templates/Layout/layout.html
@@ -7,23 +7,25 @@
 <body>
 
     <header th:fragment="header">
-        <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Registro de Asistencia</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand" href="/registros/nuevo">
+                    <img src="/img/Logo_CDMX.png" alt="" width="195" height="50">
+                    <img src="/img/Logo_Dependencia.jpg" alt="" width="195" height="50">
+                </a>
+                <button class="navbar-toggler" type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNav"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/registros/nuevo">Registrar Asistencia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/incidencias/nueva">Registrar Incidencia</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/administrar">Administrar</a>
-                        </li>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="/registros/nuevo">Registrar Asistencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/incidencias/nueva">Registrar Incidencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/administrar">Administrar</a></li>
                     </ul>
                 </div>
             </div>
