--- a/mod-asistencia/src/main/resources/templates/estadistica.html
+++ b/mod-asistencia/src/main/resources/templates/estadistica.html
@@ -2,29 +2,31 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Estadisticas</title>
+    <title>Estadísticas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
 <div class="container">
-    <h1>Estadisticas de Asistencia [[${fechaInicio}]] - [[${fechaFinal}]]</h1>
+    <h1 class="text-center mb-4 mt-4">Estadísticas de Asistencia [[${fechaInicio}]] - [[${fechaFinal}]]</h1>
     <br>
     <h4 class="card-title">
         <a th:href="@{/registros/exportar}" class="btn btn-success">Descargar Registros Comunes</a>
         <a th:href="@{/incidencias/exportar}" class="btn btn-secondary">Descargar Registros Incidencias</a>
     </h4>
-</div>
-<div  class="row justify-content-center">
-    <div class="col-lg-4">
-        <canvas id="myChart"></canvas>
+    <div class="d-flex" style="height: 75px;">
+        <div class="vr"></div>
+    </div>
+    <div  class="row justify-content-center">
+        <div class="col-md-4">
+            <canvas id="myChart"></canvas>
+        </div>
+    </div>
+    <br>
+    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <a  href="/administrar" class="btn btn-outline-secondary">Volver</a>
     </div>
 </div>
-<br>
-<div class="container d-grid gap-2 d-md-flex justify-content-md-end">
-    <a  href="/administrar" class="btn btn-outline-secondary">Volver</a>
-</div>
-
  <script th:inline="javascript">
      var faltas = [[${faltas}]]
      var numeroAsistencias = [[${numeroAsistencias}]]
