--- a/mod-asistencia/src/main/resources/templates/registro/registro-formulario.html
+++ b/mod-asistencia/src/main/resources/templates/registro/registro-formulario.html
@@ -6,53 +6,59 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-
     <div th:if="${registro.id == null}">
-        <header  th:replace="Layout/layout :: header"></header>
+        <header th:replace="Layout/layout :: header"></header>
+    </div>
+    <div th:if="${msgExito != null}" class="alert alert-success alert-dismissible">
+        [[${msgExito}]]
+        <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
     </div>
     <div th:if="${msgError != null}" class="alert alert-danger alert-dismissible">
         [[${msgError}]]
         <button type="button" class="btn btn-close" data-bs-dismiss="alert"></button>
     </div>
-    <div class="row justify-content-center">
-        <div class="col-md6 col-lg-4">
-            <h3>[[${registro.id ne null ? 'Editar registro' : 'Añadir nuevo registro'}]]</h3>
-            <br>
-            <form action="" method="post" th:object="${registro}">
-                <input type="hidden" th:field="*{id}" th:value="${registro.id}">
-                <div class="mb-3">
-                    <label for="usuario">Expediente del usuario : </label>
-                    <input id="usuario" type="text" placeholder="Digite el expediente" th:field="*{usuario}" class="form-control" th:errorclass="is-invalid" required>
-                    <div th:if="${#fields.hasErrors('usuario')}" th:errors="*{usuario}" class="invalid-feedback"></div>
-                </div>
+    <div class="container">
+        <div class="row justify-content-center mb-4">
+            <h3 class="text-center mb-4 mt-4">[[${registro.id ne null ? 'Editar Registro' : 'Registrar Asistencia'}]]</h3>
+            <div class="col-md6 col-lg-5 bg-light">
+                <br>
+                <form action="" method="post" th:object="${registro}">
+                    <input type="hidden" th:field="*{id}" th:value="${registro.id}">
+                    <div class="mb-3">
+                        <label for="usuario">Expediente del usuario : </label>
+                        <input id="usuario" type="text" placeholder="Digite el expediente" th:field="*{usuario}" class="form-control" th:errorclass="is-invalid" required>
+                        <div th:if="${#fields.hasErrors('usuario')}" th:errors="*{usuario}" class="invalid-feedback"></div>
+                    </div>
 
-                <div th:if="${registro.id != null}">
-                    <div class="mb-3">
-                        <label for="horaEntrada">Hora de entrada : </label>
-                        <input id="horaEntrada" type="time" th:field="*{horaEntrada}" class="form-control" required>
+                    <div th:if="${registro.id != null}">
+                        <div class="mb-3">
+                            <label for="horaEntrada">Hora de entrada : </label>
+                            <input id="horaEntrada" type="time" th:field="*{horaEntrada}" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="horaSalida">Hora de salida : </label>
+                            <input id="horaSalida" type="time" th:field="*{horaSalida}" class="form-control">
+                        </div>
+                        <div class="mb-3">
+                            <label for="fecha">Fecha del registro : </label>
+                            <input id="fecha" type="date" th:field="*{fecha}" class="form-control" required>
+                        </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="horaSalida">Hora de salida : </label>
-                        <input id="horaSalida" type="time" th:field="*{horaSalida}" class="form-control" required>
+                    <div th:if="${registro.id == null}" class="mb-3" >
+                        <label for="password">Password del usuario : </label>
+                        <input name="password" id="password" type="password" placeholder="Digite el password" class="form-control" required>
                     </div>
-                    <div class="mb-3">
-                        <label for="fecha">Fecha del registro : </label>
-                        <input id="fecha" type="date" th:field="*{fecha}" class="form-control" required>
+                    <div class="text-end">
+                        <button th:if="${registro.id != null}" class="btn btn-primary">Actualizar</button>
+                        <button th:if="${registro.id == null}" class="btn btn-primary">Registrar</button>
+                        &nbsp;&nbsp;
+                        <a th:if="${registro.id != null}" href="/registros" class="btn btn-outline-secondary">Cancelar</a>
                     </div>
-                </div>
-                <div th:if="${registro.id == null}" class="mb-3" >
-                    <label for="password">Password del usuario : </label>
-                    <input name="password" id="password" type="password" placeholder="Digite el password" class="form-control" required>
-                </div>
-                <div class="text-end">
-                    <button th:if="${registro.id != null}" class="btn btn-success">Actualizar</button>
-                    <button th:if="${registro.id == null}" class="btn btn-success">Registrar</button>
-                    &nbsp;&nbsp;
-                    <a th:if="${registro.id != null}" href="/registros" class="btn btn-outline-secondary">Cancelar</a>
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
     </div>
     <footer th:replace="Layout/layout :: footer"></footer>
+
 </body>
 </html>
