--- a/mod-asistencia/src/main/resources/templates/usuario/usuario-administrar.html
+++ b/mod-asistencia/src/main/resources/templates/usuario/usuario-administrar.html
@@ -8,23 +8,78 @@
 </head>
 
 <body>
-    <header></header>
-    <div class="container">
-    <div class="text-center my-3">
-        <h1>Opciones de [[${msgBienvenida}]]</h1>
-        <br><br>
-        <h2><a sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPERVISOR')" href="/usuarios">Gestionar Usuarios</a></h2>
-        <br><br>
-        <h2><a href="/registros">Revisar Registros</a></h2>
-        <br><br>
-        <h2><a href="/incidencias">Revisar Incidencias</a></h2>
-        <br><br>
-        <h2><a sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPERVISOR')" href="/estadisticas">Ver estadisticas</a></h2>
+    <!---NAVBAR--->
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand">
+                <img src="/img/Logo_CDMX.png" alt="" width="195" height="50">
+                <img src="/img/Logo_Dependencia.jpg" alt="" width="195" height="50">
+            </a>
+            <button class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Cambiar Contraseña</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/logout">Cerrar Sesión</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <a  href="/logout" class="btn btn-outline-secondary">Cerrar Sesion</a>
-    </div>
-    </div>
+    <!---BODDY--->
+    <div class="container-fluid">
+        <div class="d-flex" style="height: 20px;">
+            <div class="vr"></div>
+        </div>
+        <h1 class="text-center">Opciones de [[${msgBienvenida}]]</h1>
+        <div class="d-flex" style="height: 50px;">
+            <div class="vr"></div>
+        </div>
+        <div sec:authorize="hasAnyRole('ROLE_ADMIN','ROLE_SUPERVISOR')" class="row justify-content-around">
+            <div class="col align-self-center">
+                <div class="d-grid gap-2 d-md-flex justify-content-center">
+                    <div class="btn btn-outline-secondary">
+                        <a href="/usuarios"><img class="" src="img/Gestion_User.png" alt="" width="150" height="150"></a>
+                        <p class="text-center h5">Gestionar Usuarios</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col align-self-center">
+                <div class="d-grid gap-2 d-md-flex justify-content-center">
+                    <div class="btn btn-outline-secondary">
+                        <a href="/estadisticas"><img class="" src="img/Estadisticas.png" alt="" width="150" height="150"></a>
+                        <p class="text-center h5">Estadísticas</p>
+                    </div>
+                </div>
+            </div>
+            <div class="d-flex" style="height: 30px;">
+                <div class="vr"></div>
+            </div>
+        </div>
+        <div class="row justify-content-around">
+            <div class="col align-self-center">
+                <div class="d-grid gap-2 d-md-flex justify-content-center">
+                    <div class="btn btn-outline-secondary">
+                        <a href="/registros"><img class="" src="img/Revisar_Reg.png" alt="" width="150" height="150"></a>
+                        <p class="text-center h5">Revisar Registros</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col align-self-center">
+                <div class="d-grid gap-2 d-md-flex justify-content-center">
+                    <div class="btn btn-outline-secondary">
+                        <a href="/incidencias"><img class="" src="img/Revisar_Inc.png" alt="" width="150" height="150"></a>
+                        <p class="text-center h5">Revisar Incidencias</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
