--- a/mod-asistencia/src/main/resources/templates/usuario/usuario-editar.html
+++ b/mod-asistencia/src/main/resources/templates/usuario/usuario-editar.html
@@ -7,58 +7,59 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container">
+        <div class="row justify-content-center mb-4">
+            <h3 class="text-center mb-4 mt-4">Editar usuario</h3>
+            <div class="col-md6 col-lg-5 bg-light">
+                <br>
+                <form action="" method="post" th:object="${usuario}" >
+                        <input type="hidden" th:field="*{expediente}" th:value="${usuario.expediente}">
+                    <div class= "mb-3">
+                        <label for="nombre">Nombre : </label>
+                        <input id="nombre" type="text" placeholder="Digite el nombre" th:field="*{nombre}" class="form-control" th:errorclass="is-invalid">
 
-<div class="row justify-content-center">
-    <div class="col-md6 col-lg-4">
-        <h3>Editar usuario</h3>
-        <br>
-        <form action="" method="post" th:object="${usuario}" >
-                <input type="hidden" th:field="*{expediente}" th:value="${usuario.expediente}">
-            <div class= "mb-3">
-                <label for="nombre">Nombre : </label>
-                <input id="nombre" type="text" placeholder="Digite el nombre" th:field="*{nombre}" class="form-control" th:errorclass="is-invalid">
+                        <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="invalid-feedback"></div>
+                    </div>
+                    <div class= "mb-3">
+                        <label for="horaEntrada">Hora de entrada : </label>
+                        <input id="horaEntrada" type="time" th:field="*{horaEntrada}" class="form-control" th:errorclass="is-invalid">
 
-                <div th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}" class="invalid-feedback"></div>
-            </div>
-            <div class= "mb-3">
-                <label for="horaEntrada">Hora de entrada : </label>
-                <input id="horaEntrada" type="time" th:field="*{horaEntrada}" class="form-control" th:errorclass="is-invalid">
+                        <div th:if="${#fields.hasErrors('horaEntrada')}" th:errors="*{horaEntrada}" class="invalid-feedback"></div>
+                    </div>
+                    <div class= "mb-3">
+                        <label for="horaSalida">Hora de salida : </label>
+                        <input id="horaSalida" type="time" th:field="*{horaSalida}" class="form-control" th:errorclass="is-invalid">
 
-                <div th:if="${#fields.hasErrors('horaEntrada')}" th:errors="*{horaEntrada}" class="invalid-feedback"></div>
+                        <div th:if="${#fields.hasErrors('horaSalida')}" th:errors="*{horaSalida}" class="invalid-feedback"></div>
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_ADMIN')" class="mb-3">
+                        <label >Asignar roles : </label>
+                        <div th:each="role : ${roles}" class="form-check">
+                            <input class="form-check-input" type="checkbox" th:field="${usuario.roles}" th:value="${role.id}" th:errorclass="is-invalid">
+                            <label class="form-check-label" th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
+                        </div>
+                        <div th:if="${#fields.hasErrors('roles')}" th:errors="${usuario.roles}" style="color:red;"></div>
+                    </div>
+                    <div class= "mb-3">
+                        <label for="password">Contraseña : </label>
+                        <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control">
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_ADMIN')" class= "mb-3">
+                        <label >Estado del Usuario : </label>
+                        <select th:field="*{estado}" class="form-select form-select-sm" aria-label=".form-select-sm example">
+                            <option value="Activo">Activo</option>
+                            <option value="Inactivo">Inactivo</option>
+                        </select>
+                    </div>
+                    <div class= "text-end">
+                        <button class="btn btn-success">Actualizar</button>
+                        &nbsp;&nbsp;
+                        <a href="/usuarios" class="btn btn-secondary ms-2">Cancelar</a>
+                    </div>
+                </form>
             </div>
-            <div class= "mb-3">
-                <label for="horaSalida">Hora de salida : </label>
-                <input id="horaSalida" type="time" th:field="*{horaSalida}" class="form-control" th:errorclass="is-invalid">
-
-                <div th:if="${#fields.hasErrors('horaSalida')}" th:errors="*{horaSalida}" class="invalid-feedback"></div>
-            </div>
-            <div sec:authorize="hasRole('ROLE_ADMIN')" class="mb-3">
-                <label >Asignar roles : </label>
-                <div th:each="role : ${roles}" class="form-check">
-                    <input class="form-check-input" type="checkbox" th:field="${usuario.roles}" th:value="${role.id}" th:errorclass="is-invalid">
-                    <label class="form-check-label" th:for="${#ids.prev('roles')}" th:text="${role.nombre}"></label>
-                </div>
-                <div th:if="${#fields.hasErrors('roles')}" th:errors="${usuario.roles}" style="color:red;"></div>
-            </div>
-            <div class= "mb-3">
-                <label for="password">Contraseña : </label>
-                <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control">
-            </div>
-            <div sec:authorize="hasRole('ROLE_ADMIN')" class= "mb-3">
-                <label >Estado del Usuario : </label>
-                <select th:field="*{estado}" class="form-select form-select-sm" aria-label=".form-select-sm example">
-                    <option value="Activo">Activo</option>
-                    <option value="Inactivo">Inactivo</option>
-                </select>
-            </div>
-            <div class= "text-end">
-                <button class="btn btn-success">Actualizar</button>
-                &nbsp;&nbsp;
-                <a href="/usuarios" class="btn btn-light ms-2">Cancelar</a>
-            </div>
-        </form>
+        </div>
     </div>
-</div>
 
 <footer th:replace="Layout/layout :: footer"></footer>
 
