--- a/mod-asistencia/src/main/resources/templates/estadistica.html
+++ b/mod-asistencia/src/main/resources/templates/estadistica.html
@@ -18,7 +18,7 @@
         <div class="vr"></div>
     </div>
     <div  class="row justify-content-center">
-        <div class="col-md-4">
+        <div class="col-md-6">
             <canvas id="myChart"></canvas>
         </div>
     </div>
@@ -40,13 +40,13 @@
             'Asistencias'
         ],
         datasets: [{
-            label: 'My First Dataset',
+            label: 'Cantidad',
             data: [faltas, numeroAsistencias],
             backgroundColor: [
                 'rgb(181, 51, 255)',
                 'rgb(51, 187, 230)'
             ],
-            hoverOffset: 4
+            hoverOffset: 6
         }]
     };
     const config = {
