--- a/mod-asistencia/src/main/resources/templates/usuario/usuario-nuevo.html
+++ b/mod-asistencia/src/main/resources/templates/usuario/usuario-nuevo.html
@@ -52,6 +52,11 @@
                         <label for="password">Contraseña : </label>
                         <input id="password" type="password" placeholder="Digite la contraseña" th:field="*{password}"  class="form-control" required>
                     </div>
+                    <div class= "mb-3">
+                        <label for="verPassword">Verificar Contraseña : </label>
+                        <input id="verPassword" name="verPassword" type="password"  placeholder="Verifique la contraseña"  class="form-control" required>
+                        <div th:if="${msgError != null}" style="color:red;">[[${msgError}]]</div>
+                    </div>
                     <div class= "text-end">
                         <button class="btn btn-success">Guardar</button>
                         &nbsp;&nbsp;
